FIX: Better look of a slider bar on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -552,7 +552,8 @@
         }
 
         .slider-nav a {
-            width: 20px;
+            width: 25px;
+            height: 8px
         }
 
         .container {
